calculator/calculator.y
%{
	#include <stdio.h>
%}


/*declare tokens*/
%token NUMBER
%token ADD SUB MUL DIV ABS
%token EOL
%token OP CP

%%

input: 	| line input
		;

line: 	exp EOL {printf(" = %d\n", $1);}
		;
exp:		factor 
			| exp ADD factor {$$ = $1 + $3;}
			| exp SUB factor {$$ = $1 - $3;}
			;
factor: 	term
			| factor MUL term {$$ = $1 * $3;}
			| factor DIV term {$$ = $1 / $3;}
			;
term: 		NUMBER
			| ABS term {$$ = $2 >= 0 ? $2 : -$2;}
			| OP exp CP {$$ = $2;}
			;

%%

int main (){
	yyparse();
	return 0;
}

int yyerror(char* s){
	printf("ERROR: %s\n", s);
}
